syntax = "proto3";

import "decimalValue.proto";

option csharp_namespace = "BalanceForClient";
package customTypes;

//Сервис баланса Пользователя
service BalanceService
{
  rpc GetBalance(GetBalanceRequest) returns(GetBalanceResponse);

  rpc PutOnBalance(PutOnBalanceRequest) returns(PutOnBalancesponse);
}
//Запрос баланса
message GetBalanceRequest
{
        //Id пользователя, который расшифровывается по схеме 8-4-4-4-12: 
        //"3422b448-2460-4fd2-9183-8000de6f8343".
	string id = 1;
}
//Ответ на запрос
message GetBalanceResponse
{
        //Id пользователя, который расшифровывается по схеме 8-4-4-4-12: 
        //"3422b448-2460-4fd2-9183-8000de6f8343".
	string user_id = 1;
        // Баланс в у.е.
	moneyTypes.DecimalValue balance = 2;
}

message PutOnBalanceRequest
{
    string user_id = 1;

    moneyTypes.DecimalValue sum = 2;
}

message PutOnBalancesponse
{

}
