syntax = "proto3";

option csharp_namespace = "Transact";

package transact;

import "decimalValue.proto";

message BalanceReplenished 
{
	moneyTypes.DecimalValue sum = 1;
	string id_user_buyer = 2;
}

message OrderClosed
{
	moneyTypes.DecimalValue sum = 1;
	int32 count_product = 2;
	string id_product = 3;
	string id_order_buyer = 4;
	string id_user_buyer = 5;
	string id_user_seller = 6;
	string id_order_seller = 7;
}

message TransactionCanceled
{
	string id_global_transact = 1;
	SourceEventTransaction SOURCE = 2;
}

message TransactionCompleted
{
	string id_global_transact = 1;
	SourceEventTransaction SOURCE = 2;
	string id_object = 3;
	moneyTypes.DecimalValue quanity = 4;
}

message TransactionBalanceCommitted
{
	string id_global_transact = 1;
	string id_order = 2;
	string id_user = 3;
	moneyTypes.DecimalValue sum = 4;
	Operation MODE = 5;
	TransactionType TYPE = 6;
}

message TransactionProductCommitted
{
	string id_global_transact = 1;
	string id_product = 2;
	string id_user = 3;
	string id_order = 4;
	int32 count = 5;
	Operation MODE = 6;
	TransactionType TYPE = 7;
}

enum Operation {
	// Операция добавления 
	ADDITION = 0;
	// Операция вычитания  
	SUBTRACT = 1;
}

enum TransactionType {
	// Операция проводки транзакции 
	ACTION  = 0;
	// Операция отката транзакции 
	ROLLBACK = 1;
}

enum SourceEventTransaction {
	PRODUCT_ORDER_ADDITION_ACTION = 0;
	PRODUCT_ORDER_SUBTRACT_ACTION = 1;
	
	BALANCE_ADDITION_IMMEDIATE = 2;
	BALANCE_SUBTRACT_IMMEDIATE = 3;
	
	PRODUCT_ORDER_ADDITION_ROLLBACK = 4;
	PRODUCT_ORDER_SUBTRACT_ROLLBACK = 5;
	
	BALANCE_ADDITION_ROLLBACK = 6;
	BALANCE_SUBTRACT_ROLLBACK = 7;
	
	PRODUCT_BRIEFCASE_ADDITION_ROLLBACK = 8;
	PRODUCT_BRIEFCASE_SUBTRACT_ROLLBACK = 9;
	
	PRODUCT_BRIEFCASE_ADDITION_IMMEDIATE = 10;
	PRODUCT_BRIEFCASE_SUBTRACT_IMMEDIATE = 11;
}